# github-python-action-template

./: .gitignore  LICENSE  Makefile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: example-usage.yml  test.yml
src/: __init__.py  action_runner.py  main.py  utils.py
tests/: __init__.py  test_action_runner.py  test_utils.py
